--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron center">
+  <h1>Welcome to Chataka!</h1>
+  Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary" %>
+</div>
