--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,8 +14,8 @@
         <div class="form-group"><%= f.label :password %><br />
           <%= f.password_field :password, autocomplete: "off", class: 'form-control' %></div>
 
-        <div class="form-group"><%= f.label :password_confirmation, class: 'form-control' %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+        <div class="form-group"><%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off" , class: 'form-control'%></div>
 
         <div class="form-group"><%= f.submit "Sign up", class: "btn btn-primary"%></div>
       <% end %>
