--- a/app/views/manufacturers/show.html.erb
+++ b/app/views/manufacturers/show.html.erb
@@ -1,3 +1,7 @@
+<script src="//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry" type="text/javascript"></script>
+<script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js" type="text/javascript"></script>
+
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -95,5 +99,34 @@
   <%= @manufacturer.description %>
 </p>
 
+<p>
+  <strong>Latitude:</strong>
+  <%= @manufacturer.latitude %>
+</p>
+
+<p>
+  <strong>Longitude:</strong>
+  <%= @manufacturer.longitude %>
+</p>
+
+<p>
+  <strong>Address:</strong>
+  <%= @manufacturer.address %>
+</p>
+
+
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+
 <%= link_to 'Edit', edit_manufacturer_path(@manufacturer) %> |
 <%= link_to 'Back', manufacturers_path %>
+
+<script type="text/javascript">
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+    markers = handler.addMarkers(<%=raw @hash.to_json %>);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
+</script>
