--- a/app/views/manufacturers/index.html.erb
+++ b/app/views/manufacturers/index.html.erb
@@ -3,27 +3,17 @@
 <table>
   <thead>
     <tr>
-      <th>Manufacturer name</th>
-      <th>Brand name</th>
-      <th>Street1</th>
-      <th>Street2</th>
-      <th>Post office</th>
+      <th>Manufacturer Name</th>
+      <th>Brand Name</th>
       <th>City</th>
-      <th>Dist</th>
       <th>State</th>
-      <th>Pin</th>
-      <th>Mobile</th>
-      <th>Cml no</th>
+      <th>CML No</th>
       <th>Valid date</th>
       <th>Operative status</th>
       <th>Bottle 20liters</th>
       <th>Bottle 2liters</th>
       <th>Bottle 1liter</th>
       <th>Bottle 500ml</th>
-      <th>Email</th>
-      <th>Description</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
       <th>Address</th>
     </tr>
   </thead>
@@ -33,25 +23,15 @@
       <tr>
         <td><%= manufacturer.manufacturer_name %></td>
         <td><%= manufacturer.brand_name %></td>
-        <td><%= manufacturer.street1 %></td>
-        <td><%= manufacturer.street2 %></td>
-        <td><%= manufacturer.post_office %></td>
         <td><%= manufacturer.city %></td>
-        <td><%= manufacturer.dist %></td>
         <td><%= manufacturer.state %></td>
-        <td><%= manufacturer.pin %></td>
-        <td><%= manufacturer.mobile %></td>
         <td><%= manufacturer.cml_no %></td>
-        <td><%= manufacturer.valid_date %></td>
-        <td><%= manufacturer.operative_status %></td>
-        <td><%= manufacturer.bottle_20liters %></td>
-        <td><%= manufacturer.bottle_2liters %></td>
-        <td><%= manufacturer.bottle_1liter %></td>
-        <td><%= manufacturer.bottle_500ml %></td>
-        <td><%= manufacturer.email %></td>
-        <td><%= manufacturer.description %></td>
-        <td><%= manufacturer.latitude %></td>
-        <td><%= manufacturer.longitude %></td>
+        <td><%= manufacturer.valid_date%></td>
+        <td><%= boolean_to_words(manufacturer.operative_status) %></td>
+        <td><%= boolean_to_words(manufacturer.bottle_20liters) %></td>
+        <td><%= boolean_to_words(manufacturer.bottle_2liters) %></td>
+        <td><%= boolean_to_words(manufacturer.bottle_1liter) %></td>
+        <td><%= boolean_to_words(manufacturer.bottle_500ml) %></td>
         <td><%= manufacturer.address %></td>
         <td><%= link_to 'Show', manufacturer %></td>
         <td><%= link_to 'Edit', edit_manufacturer_path(manufacturer) %></td>
