--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,228 @@
  *= require_self
  *= require_tree .
  */
+
+/* Fonts */
+@font-face {
+    font-family: 'pacificoregular';
+    src: url('fonts/pacifico/pacifico-webfont.eot');
+    src: url('fonts/pacifico/pacifico-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/pacifico/pacifico-webfont.woff') format('woff'),
+         url('fonts/pacifico/pacifico-webfont.ttf') format('truetype'),
+         url('fonts/pacifico/pacifico-webfont.svg#pacificoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'open_sansbold';
+    src: url('fonts/opensans/opensans-bold-webfont.eot');
+    src: url('fonts/opensans/opensans-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/opensans/opensans-bold-webfont.woff') format('woff'),
+         url('fonts/opensans/opensans-bold-webfont.ttf') format('truetype'),
+         url('fonts/opensans/opensans-bold-webfont.svg#open_sansbold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'open_sansbold_italic';
+    src: url('fonts/opensans/opensans-bolditalic-webfont.eot');
+    src: url('fonts/opensans/opensans-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/opensans/opensans-bolditalic-webfont.woff') format('woff'),
+         url('fonts/opensans/opensans-bolditalic-webfont.ttf') format('truetype'),
+         url('fonts/opensans/opensans-bolditalic-webfont.svg#open_sansbold_italic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'open_sansitalic';
+    src: url('fonts/opensans/opensans-italic-webfont.eot');
+    src: url('fonts/opensans/opensans-italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/opensans/opensans-italic-webfont.woff') format('woff'),
+         url('fonts/opensans/opensans-italic-webfont.ttf') format('truetype'),
+         url('fonts/opensans/opensans-italic-webfont.svg#open_sansitalic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'open_sanslight';
+    src: url('fonts/opensans/opensans-light-webfont.eot');
+    src: url('fonts/opensans/opensans-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/opensans/opensans-light-webfont.woff') format('woff'),
+         url('fonts/opensans/opensans-light-webfont.ttf') format('truetype'),
+         url('fonts/opensans/opensans-light-webfont.svg#open_sanslight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'open_sanslight_italic';
+    src: url('fonts/opensans/opensans-lightitalic-webfont.eot');
+    src: url('fonts/opensans/opensans-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/opensans/opensans-lightitalic-webfont.woff') format('woff'),
+         url('fonts/opensans/opensans-lightitalic-webfont.ttf') format('truetype'),
+         url('fonts/opensans/opensans-lightitalic-webfont.svg#open_sanslight_italic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'open_sansregular';
+    src: url('fonts/opensans/opensans-regular-webfont.eot');
+    src: url('fonts/opensans/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/opensans/opensans-regular-webfont.woff') format('woff'),
+         url('fonts/opensans/opensans-regular-webfont.ttf') format('truetype'),
+         url('fonts/opensans/opensans-regular-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+/* Global Styles */
+
+*{
+  outline: 0!important;
+}
+
+html, body {
+  height:100%;
+  font-family: 'open_sansregular';
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body{
+  padding-top: 50px;
+  color: #666;
+}
+
+a {
+  color: #16A085;
+}
+
+a:hover, a:focus {
+  color: #1ABC9C;
+  text-decoration: none;
+}
+
+.placeholder {
+  color: #aaa;
+}
+
+.container-int{
+  margin-bottom: 50px;
+}
+
+#topcontrol{
+  background-color: #000;
+  padding: 5px 10px;
+  font-size: 28px;
+  line-height: 20px;
+  color: #9B9B9B;
+}
+
+h1, h2, h3, .h1, .h2, .h3 {
+  font-family: 'open_sanslight';
+}
+
+h4, h5, h6, .h4, .h5, .h6{
+  font-family: 'open_sansregular';
+}
+
+h2.section-title{
+  margin: 0px 0 30px 0;
+  font-size: 25px;
+}
+
+h3.section-title{
+  margin: 0px 0 20px 0;
+  font-size: 20px;
+}
+
+h1.post-title, h2.post-title{
+  font-family: 'open_sansbold';
+  font-size: 24px;
+  margin-top: 0;
+}
+
+p {
+  margin: 0 0 25px 0;
+  line-height: 23px;
+}
+
+blockquote {
+  padding: 15px 20px;
+  border-left: 5px solid #16A085;
+  background: #FAFAFA;
+}
+
+blockquote p {
+  font-size: 15px;
+  line-height: 24px;
+}
+
+.navbar{
+  margin: 0;
+  border: none;
+  border-bottom: 2px solid #16A085;
+  border-radius: 0;
+}
+
+.navbar-inverse {
+  background-color: #1ABC9C;
+  border-color: #16A085;
+}
+
+.navbar-inverse .navbar-brand{
+  font-family: 'pacificoregular';
+  font-size: 30px;
+  line-height: 40px;
+  color: #FFF;
+  padding: 0 15px;
+  margin: 8px 0 0px 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+  font-size: 15px;
+  color: #fff;
+  padding: 18px 15px;
+  font-family: 'open_sansregular';
+  -webkit-transition: all 0.4s ease-in-out;
+  -moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+  color: #ffffff;
+  background-color: #16A085;
+
+}
+
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+  color: #ffffff;
+  background-color: #16A085;
+}
+
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+  color: #ffffff;
+  background-color: #16A085;
+}
+
+.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
+  background-color: #16A085;
+}
+
+.navbar-inverse .navbar-toggle {
+  border-color: #16A085;
+  outline: none;
+}
