--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Chataka</a>
+    <a class="navbar-brand" <%= link_to "InstaWater", root_path %></a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
