Changed image_tag on home and price page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
                     <div class="col-sm-4 feature first">
                         <div class="img_box">
                             <a href="services.html">
-                                <img src="/assets/service1.png">
+                                <%= image_tag "service1.png" %>
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -32,7 +32,7 @@
                     <div class="col-sm-4 feature">
                         <div class="img_box">
                             <a href="services.html">
-                                <img src="/assets/service2.png">
+                                <%= image_tag "service2.png" %>
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -49,7 +49,7 @@
                     <div class="col-sm-4 feature last">
                         <div class="img_box">
                             <a href="services.html">
-                                <img src="/assets/service3.png">
+                                <%= image_tag "service3.png" %>
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-sm-6 info">
                     <h3>
-                        <img src="/assets/features-ico1.png" />
+                        <%= image_tag "features-ico1.png" %>
                         Knowing Your Water!
                     </h3>
                     <p>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col-sm-6 info info-left">
                     <h3>
-                        <img src="/assets/features-ico2.png" />
+                        <%= image_tag "features-ico2.png" %>
                         Knowing Your Environment!
                     </h3>
                     <p>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-sm-6 info">
                     <h3>
-                        <img src="/assets/features-ico3.png" />
+                        <%= image_tag "features-ico3.png" %>
                         Choose to Make Difference!
                     </h3>
                     <p>
@@ -124,22 +124,22 @@
             </div>
             <div class="row">
                 <div class="col-md-3 col-sm-4 ">
-                    <img src="/assets/client1.png" />
+                    <%= image_tag "client1.png" %>
                     <p>S. N. Srinivasan: </p>
                     <p>I am very happy with the service from InstaWater. </p>
                 </div>
                 <div class="col-md-3 col-sm-4 client">
-                    <img src="/assets/client1.png" />
+                    <%= image_tag "client1.png" %>
                     <p>S. N. Srinivasan: </p>
                     <p>I am very happy with the service from InstaWater. </p>
                 </div>
                 <div class="col-md-3 col-sm-4 client">
-                    <img src="/assets/client1.png" />
+                    <%= image_tag "client1.png" %>
                     <p>S. N. Srinivasan: </p>
                     <p>I am very happy with the service from InstaWater. </p>
                 </div>
                 <div class="col-md-3 col-sm-4 client">
-                    <img src="/assets/client1.png" />
+                    <%= image_tag "client1.png" %>
                     <p>S. N. Srinivasan: </p>
                     <p>I am very happy with the service from InstaWater. </p>
                 </div>
