--- a/app/views/pages/pricing.html.erb
+++ b/app/views/pages/pricing.html.erb
@@ -74,7 +74,7 @@
                 <div class="col-sm-3 ultra">
                     <div class="plan">
                         <div class="wrapper">
-                            <img class="ribbon" src="/assets/badge.png">
+                            <%= image_tag("badge.png", :class=> "ribbon")  %>
                             <h3>Riviera</h3>
                             <div class="price">
                                 <span class="dollar">Rs</span>
