--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -74,7 +74,7 @@
             </div>
             <div class="row feature">
                 <div class="col-sm-6">
-                    <img src="/assets/showcase1.png" class="img-responsive" />
+                    <%= image_tag("showcase1.png", :class=>"img-responsive") %>
                 </div>
                 <div class="col-sm-6 info">
                     <h3>
@@ -88,7 +88,7 @@
             </div>
             <div class="row feature">
                 <div class="col-sm-6 pic-right">
-                    <img src="/assets/showcase2.png" class="pull-right img-responsive" />
+                    <%= image_tag("showcase2.png", :class=>"pull-right img-responsive") %>
                 </div>
                 <div class="col-sm-6 info info-left">
                     <h3>
@@ -102,7 +102,8 @@
             </div>
             <div class="row feature">
                 <div class="col-sm-6">
-                    <img src="/assets/showcase3.png" class="img-responsive" />
+                    <%= image_tag("showcase3.png", :class=>"img-responsive") %>
+
                 </div>
                 <div class="col-sm-6 info">
                     <h3>
