--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,88 +14,82 @@
 
 /* Fonts */
 @font-face {
-    font-family: 'pacificoregular';
-    src: url('fonts/pacifico/pacifico-webfont.eot');
-    src: url('fonts/pacifico/pacifico-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/pacifico/pacifico-webfont.woff') format('woff'),
-         url('fonts/pacifico/pacifico-webfont.ttf') format('truetype'),
-         url('fonts/pacifico/pacifico-webfont.svg#pacificoregular') format('svg');
+    font-family: 'OpenSansRegular';
+    src:font-url('OpenSansRegular.eot');
+    src:font-url('OpenSansRegular.eot?#iefix') format('embedded-opentype'),
+        url('OpenSansRegular.ttf') format('truetype'),
+        url('OpenSansRegular.woff') format('woff'),
+        url('OpenSansRegular.svg#icofonts') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'Arvo';
+    src:font-url('Arvo.eot');
+    src:font-url('Arvo.eot?#iefix') format('embedded-opentype'),
+        url('Arvo.ttf') format('truetype'),
+        url('Arvo.woff') format('woff'),
+        url('Arvo.svg#icofonts') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'open_sansbold';
-    src: url('fonts/opensans/opensans-bold-webfont.eot');
-    src: url('fonts/opensans/opensans-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/opensans/opensans-bold-webfont.woff') format('woff'),
-         url('fonts/opensans/opensans-bold-webfont.ttf') format('truetype'),
-         url('fonts/opensans/opensans-bold-webfont.svg#open_sansbold') format('svg');
+    font-family: 'DroidSans';
+    src:font-url('DroidSans.eot');
+    src:font-url('DroidSans.eot?#iefix') format('embedded-opentype'),
+        url('DroidSans.ttf') format('truetype'),
+        url('DroidSans.woff') format('woff'),
+        url('DroidSans.svg#icofonts') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
-    font-family: 'open_sansbold_italic';
-    src: url('fonts/opensans/opensans-bolditalic-webfont.eot');
-    src: url('fonts/opensans/opensans-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/opensans/opensans-bolditalic-webfont.woff') format('woff'),
-         url('fonts/opensans/opensans-bolditalic-webfont.ttf') format('truetype'),
-         url('fonts/opensans/opensans-bolditalic-webfont.svg#open_sansbold_italic') format('svg');
+    font-family: 'Vollkorn-Regular';
+    src:font-url('Vollkorn-Regular.eot');
+    src:font-url('Vollkorn-Regular.eot?#iefix') format('embedded-opentype'),
+        url('Vollkorn-Regular.ttf') format('truetype'),
+        url('Vollkorn-Regular.woff') format('woff'),
+        url('Vollkorn-Regular.svg#icofonts') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
-    font-family: 'open_sansitalic';
-    src: url('fonts/opensans/opensans-italic-webfont.eot');
-    src: url('fonts/opensans/opensans-italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/opensans/opensans-italic-webfont.woff') format('woff'),
-         url('fonts/opensans/opensans-italic-webfont.ttf') format('truetype'),
-         url('fonts/opensans/opensans-italic-webfont.svg#open_sansitalic') format('svg');
+    font-family: 'Ubuntu-Light';
+    src:font-url('Ubuntu-Light.eot');
+    src:font-url('Ubuntu-Light.eot?#iefix') format('embedded-opentype'),
+        url('Ubuntu-Light.ttf') format('truetype'),
+        url('Ubuntu-Light.woff') format('woff'),
+        url('Ubuntu-Light.svg#icofonts') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
-    font-family: 'open_sanslight';
-    src: url('fonts/opensans/opensans-light-webfont.eot');
-    src: url('fonts/opensans/opensans-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/opensans/opensans-light-webfont.woff') format('woff'),
-         url('fonts/opensans/opensans-light-webfont.ttf') format('truetype'),
-         url('fonts/opensans/opensans-light-webfont.svg#open_sanslight') format('svg');
+    font-family: 'JosefinSlab';
+    src:font-url('JosefinSlab.eot');
+    src:font-url('JosefinSlab.eot?#iefix') format('embedded-opentype'),
+        url('JosefinSlab.ttf') format('truetype'),
+        url('JosefinSlab.woff') format('woff'),
+        url('JosefinSlab.svg#icofonts') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
-    font-family: 'open_sanslight_italic';
-    src: url('fonts/opensans/opensans-lightitalic-webfont.eot');
-    src: url('fonts/opensans/opensans-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/opensans/opensans-lightitalic-webfont.woff') format('woff'),
-         url('fonts/opensans/opensans-lightitalic-webfont.ttf') format('truetype'),
-         url('fonts/opensans/opensans-lightitalic-webfont.svg#open_sanslight_italic') format('svg');
+    font-family: 'Lato-Regular';
+    src:font-url('Lato-Regular.eot');
+    src:font-url('Lato-Regular.eot?#iefix') format('embedded-opentype'),
+        url('Lato-Regular.ttf') format('truetype'),
+        url('Lato-Regular.woff') format('woff'),
+        url('Lato-Regular.svg#icofonts') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
-
-@font-face {
-    font-family: 'open_sansregular';
-    src: url('fonts/opensans/opensans-regular-webfont.eot');
-    src: url('fonts/opensans/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/opensans/opensans-regular-webfont.woff') format('woff'),
-         url('fonts/opensans/opensans-regular-webfont.ttf') format('truetype'),
-         url('fonts/opensans/opensans-regular-webfont.svg#open_sansregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
 /* Global Styles */
 
 *{
@@ -235,4 +229,13 @@ blockquote p {
 .navbar-inverse .navbar-toggle {
   border-color: #16A085;
   outline: none;
+}
+
+
+.text p {
+  font-family: "Rooney_Regular";
+}
+
+.text h6 {
+  font-family: "Rooney_Regular";
 }
