--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -7,9 +7,9 @@ body {
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+  font-family: DroidSans, Lato-Regular, Ubuntu-Light, OpenSansRegular, JosefinSlab, Vollkorn-Regular, verdana, arial, helvetica, sans-serif, Arvo;
+  font-size: 18px;
+  line-height: 22px;
 }
 
 pre {
